<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/drawer_menu_book_group">
        <item
            android:id="@+id/action_group_bd"
            android:icon="@drawable/ic_bookshelf"
            android:title="本地书籍"
            android:visible="false"
            app:tint="@color/tv_text_default" />
    </group>

    <group android:id="@+id/drawer_menu_book_source">
        <item
            android:id="@+id/action_book_source_manage"
            android:icon="@drawable/ic_book_source_manage"
            android:title="@string/book_source_manage"
            app:tint="@color/tv_text_default" />

        <item
            android:id="@+id/action_replace_rule"
            android:icon="@drawable/ic_find_replace"
            android:title="@string/replace_rule_title"
            app:tint="@color/tv_text_default" />

        <item
            android:id="@+id/action_download"
            android:icon="@drawable/ic_download_line"
            android:title="@string/action_download"
            app:tint="@color/tv_text_default" />
    </group>

    <group android:id="@+id/drawer_night_theme">
        <item
            android:id="@+id/action_night_theme"
            android:icon="@drawable/ic_brightness"
            android:title="@string/night_theme"
            app:actionLayout="@layout/switch_item_night_theme"
            app:tint="@color/tv_text_default" />
    </group>

    <group android:id="@+id/drawer_menu_setting">
        <item
            android:id="@+id/action_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/setting"
            app:tint="@color/tv_text_default" />

        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about"
            app:tint="@color/tv_text_default" />

        <item
            android:id="@+id/action_donate"
            android:icon="@drawable/ic_local_cafe"
            android:title="@string/donate"
            app:tint="@color/tv_text_default" />
    </group>

    <group android:id="@+id/drawer_menu_backup">
        <item
            android:id="@+id/action_backup"
            android:icon="@drawable/ic_backup_black_24dp"
            android:title="@string/backup"
            app:tint="@color/tv_text_default" />

        <item
            android:id="@+id/action_restore"
            android:icon="@drawable/ic_restore"
            android:title="@string/restore"
            app:tint="@color/tv_text_default" />
    </group>

</menu>
