<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activity.BookSourceActivity">


    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_done_all_black_24dp_new"
        android:title="@string/select_all"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_group"
        android:title="分组"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/all_group"
                android:title="所有" />

            <item
                android:id="@+id/un_group"
                android:title="未分组" />

        </menu>
    </item>

    <item
        android:id="@+id/action_add_book_source"
        android:icon="@drawable/ic_add_black_24dp_new"
        android:title="@string/add_book_source"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import_book_source_local"
        android:icon="@drawable/ic_settings_ethernet_black_24dp_new"
        android:title="@string/import_book_source_local"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import_book_source_onLine"
        android:icon="@drawable/ic_settings_ethernet_black_24dp_new"
        android:title="@string/import_book_source_on_line"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_del_select"
        android:icon="@drawable/ic_clear_all"
        android:title="@string/del_select"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reset_book_source"
        android:icon="@drawable/ic_refresh_black_24dp_new"
        android:title="@string/refresh_default"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_check_book_source"
        android:icon="@drawable/ic_refresh_black_24dp_new"
        android:title="@string/check_book_source"
        app:showAsAction="never" />

</menu>
