<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.kunfei.bookshelf.widget.prefs.ATESwitchPreference
        android:defaultValue="false"
        android:key="immersionStatusBar"
        android:summary="@string/status_bar_immersion"
        android:title="@string/immersion_status_bar" />

    <com.kunfei.bookshelf.widget.prefs.ATESwitchPreference
        android:defaultValue="false"
        android:key="navigationBarColorChange"
        android:summary="@string/navigation_bar_color_change_s"
        android:title="@string/navigation_bar_color_change" />

    <Preference
        android:key="defaultTheme"
        android:summary="@string/restore_default_theme"
        android:title="@string/default_theme" />

    <com.kunfei.bookshelf.widget.prefs.ATEPreferenceCategory android:title="白天">

        <com.jaredrummler.android.colorpicker.ColorPreference
            android:defaultValue="@color/md_grey_100"
            android:key="colorPrimary"
            android:summary="白天，主色调"
            android:title="主色调"
            app:cpv_dialogType="preset" />

        <com.jaredrummler.android.colorpicker.ColorPreference
            android:defaultValue="@color/md_pink_600"
            android:key="colorAccent"
            android:summary="白天，强调色"
            android:title="强调色"
            app:cpv_dialogType="preset" />

        <com.jaredrummler.android.colorpicker.ColorPreference
            android:defaultValue="@color/md_grey_100"
            android:key="colorBackground"
            android:summary="白天，背景色"
            android:title="背景色"
            app:cpv_dialogType="preset" />

    </com.kunfei.bookshelf.widget.prefs.ATEPreferenceCategory>

    <com.kunfei.bookshelf.widget.prefs.ATEPreferenceCategory android:title="夜间">

        <com.jaredrummler.android.colorpicker.ColorPreference
            android:defaultValue="@color/md_grey_800"
            android:key="colorPrimaryNight"
            android:summary="夜间，主色调"
            android:title="主色调"
            app:cpv_dialogType="preset" />

        <com.jaredrummler.android.colorpicker.ColorPreference
            android:defaultValue="@color/md_pink_800"
            android:key="colorAccentNight"
            android:summary="夜间，强调色"
            android:title="强调色"
            app:cpv_dialogType="preset" />

        <com.jaredrummler.android.colorpicker.ColorPreference
            android:defaultValue="@color/md_grey_800"
            android:key="colorBackgroundNight"
            android:summary="夜间，背景色"
            android:title="背景色"
            app:cpv_dialogType="preset" />

    </com.kunfei.bookshelf.widget.prefs.ATEPreferenceCategory>

</PreferenceScreen>