<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save_black_24dp"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_copy_source"
        android:title="@string/copy_source"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_paste_source"
        android:title="@string/paste_source"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_qr_code_camera"
        android:title="扫描二维码"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_qr_code_img"
        android:title="扫描图片"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_qr_code_generate"
        android:title="生成二维码"
        app:showAsAction="never" />

</menu>