<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/bookmark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvChapterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/bookmark" />

    <com.kunfei.bookshelf.widget.views.ATETextInputLayout
        android:id="@+id/til_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/content"
        android:padding="10dp">

        <com.kunfei.bookshelf.widget.views.ATEEditText
            android:id="@+id/tie_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3" />
    </com.kunfei.bookshelf.widget.views.ATETextInputLayout>

    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/selector_fillet_btn_bg"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/ok"
        android:textColor="@color/tv_text_default" />

    <LinearLayout
        android:id="@+id/llEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_fillet_btn_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/action_save"
            android:textColor="@color/tv_text_default" />

        <TextView
            android:id="@+id/tv_del"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_fillet_btn_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/action_del"
            android:textColor="@color/tv_text_default" />

    </LinearLayout>

</LinearLayout>
