<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    app:cardBackgroundColor="@color/background_card">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <com.kunfei.bookshelf.widget.views.ATETextInputLayout
                android:id="@+id/til_replace_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/replace_rule_summary">

                <com.kunfei.bookshelf.widget.views.ATEEditText
                    android:id="@+id/tie_replace_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />
            </com.kunfei.bookshelf.widget.views.ATETextInputLayout>

            <com.kunfei.bookshelf.widget.views.ATETextInputLayout
                android:id="@+id/til_replace_rule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/replace_rule">

                <com.kunfei.bookshelf.widget.views.ATEEditText
                    android:id="@+id/tie_replace_rule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="3" />
            </com.kunfei.bookshelf.widget.views.ATETextInputLayout>

            <com.kunfei.bookshelf.widget.views.ATECheckBox
                android:id="@+id/cb_use_regex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_regex" />

            <com.kunfei.bookshelf.widget.views.ATETextInputLayout
                android:id="@+id/til_replace_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/replace_to">

                <com.kunfei.bookshelf.widget.views.ATEEditText
                    android:id="@+id/tie_replace_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="3" />
            </com.kunfei.bookshelf.widget.views.ATETextInputLayout>

            <com.kunfei.bookshelf.widget.views.ATETextInputLayout
                android:id="@+id/til_use_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/use_to">

                <com.kunfei.bookshelf.widget.views.ATEEditText
                    android:id="@+id/tie_use_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="3" />
            </com.kunfei.bookshelf.widget.views.ATETextInputLayout>

        </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>