<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.monke.monkeybook.widget.ContentTextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:lineSpacingExtra="5dp"
        android:lineSpacingMultiplier="1"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/tv_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/is_loading"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_error_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_data_error"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_load_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_tv_first_button"
            android:gravity="center"
            android:lines="1"
            android:paddingBottom="7dp"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:paddingTop="7dp"
            android:text="@string/retry"
            android:textColor="@drawable/selector_tv_first_text"
            android:textSize="16sp" />
    </LinearLayout>
</FrameLayout>